Refactor styles and update event details in invitation

--- a/invitation.html
+++ b/invitation.html
@@ -8,7 +8,6 @@
     <style>
         :root {
             --rose-prestige: #d4a5a5;
-            --rose-clair: #e1b4b4;
             --white-cream: #fffdf9;
             --text-gray: #5a5a5a;
             --text-dark: #333333;
@@ -26,22 +25,23 @@
         .page-wrapper { position: relative; z-index: 10; padding: 80px 10px 40px 10px; display: flex; flex-direction: column; align-items: center; }
         .main-frame { width: 100%; max-width: 600px; text-align: center; }
 
-        .names-inline { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(2.5rem, 8vw, 3.5rem); margin: 5px 0 0 0; }
-        .names-hebrew { font-family: 'Cormorant Garamond', serif; color: var(--rose-prestige); font-size: 1.8rem; font-weight: 700; margin-bottom: 10px; direction: rtl; }
+        .names-inline { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(2.5rem, 8vw, 3.5rem); margin: 0; }
+        .names-hebrew { font-family: 'Cormorant Garamond', serif; color: var(--rose-prestige); font-size: 1.8rem; font-weight: 700; margin-bottom: 5px; direction: rtl; }
 
         .section-title { font-family: 'Cormorant Garamond', serif; font-size: 1.8rem; text-transform: uppercase; letter-spacing: 3px; color: var(--text-dark); margin-bottom: 5px; }
 
-        .hero-photo, .section-photo { width: 100%; max-width: 500px; border: 2px solid white; padding: 5px; background: white; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .hero-photo, .section-photo { width: 100%; max-width: 500px; border: 2px solid white; padding: 5px; background: white; margin: 10px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
 
-        .sub-text { font-size: 1.2rem; font-style: italic; color: var(--text-gray); display: block; margin-bottom: 10px; }
-        .date-block { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.4; margin-bottom: 15px; }
+        .sub-text { font-size: 1.2rem; font-style: italic; color: var(--text-gray); display: block; margin-bottom: 5px; }
+        .date-block { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.3; margin-bottom: 10px; }
         .date-line { font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dark); }
-        .venue-name { font-size: 1.4rem; font-weight: 700; color: var(--rose-prestige); margin-top: 5px; display: block; }
+        .venue-name { font-size: 1.4rem; font-weight: 700; color: var(--rose-prestige); margin-top: 2px; display: block; }
         .address-text { font-style: italic; font-size: 1rem; color: var(--text-gray); }
+        .highlight-text { font-size: 0.95rem; color: var(--rose-prestige); font-style: italic; margin-top: 5px; display: block; }
 
-        .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 30px 15px; margin: 20px 0; width: 100%; position: relative; }
+        .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 20px 15px; margin: 15px 0; width: 100%; position: relative; }
 
-        .action-btns { display: flex; justify-content: center; gap: 10px; margin-top: 15px; flex-wrap: wrap; }
+        .action-btns { display: flex; justify-content: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
         .btn-mini {
             text-decoration: none; font-family: 'Montserrat', sans-serif; font-size: 0.65rem;
             text-transform: uppercase; letter-spacing: 1px; color: var(--rose-prestige);
@@ -50,25 +50,31 @@
         }
         .btn-mini:hover { background: var(--rose-prestige); color: white; }
 
-        .illust-voiture { width: 180px; height: auto; margin: 15px auto; display: block; }
-        .illust-bagues { width: 150px; height: auto; margin: 15px auto; display: block; }
-        .hebreu-img { width: 100%; max-width: 400px; margin: 0 auto 20px; display: block; filter: sepia(0.2); }
+        .illust-voiture { width: 160px; height: auto; margin: 5px auto; display: block; }
+        .illust-bagues { width: 130px; height: auto; margin: 5px auto; display: block; }
 
-        .family-grid { display: flex; justify-content: space-between; gap: 10px; margin-bottom: 25px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 20px; }
-        .family-col { flex: 1; min-width: 0; }
-        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.4rem; margin-bottom: 15px; font-weight: normal; }
-        .family-col p { font-size: 0.85rem; margin: 5px 0; color: var(--text-dark); line-height: 1.3; font-weight: 400; }
+        .hebreu-img { width: 100%; max-width: 380px; margin: 0 auto 10px; display: block; filter: sepia(0.2); }
+
+        .family-grid { display: flex; justify-content: space-between; gap: 10px; margin-bottom: 15px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 15px; }
+        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.4rem; margin-bottom: 8px; font-weight: normal; }
+        .family-col p { font-size: 0.85rem; margin: 2px 0; color: var(--text-dark); line-height: 1.2; word-wrap: break-word; font-weight: 400; }
+        .family-spacer { margin-bottom: 10px; display: block; }
 
         .memorial-card {
             background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 4px; padding: 40px 25px; margin: 30px auto 10px; max-width: 90%;
+            border-radius: 4px;
+            padding: 25px 20px;
+            margin: 20px auto 5px;
+            max-width: 90%;
             box-shadow: 0 4px 15px rgba(0,0,0,0.05);
         }
-        .memorial-card p { font-size: 1.15rem; line-height: 1.6; color: var(--text-dark); font-style: italic; margin: 0; }
+        .memorial-card p { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.5; color: var(--text-dark); font-style: italic; margin: 0; }
 
-        .wedding-card { background: white; padding: 25px 20px; margin-top: 30px; border: 1px solid var(--line-color); text-align: left; }
-        .btn-action { background: var(--text-dark); color: white; border: none; padding: 18px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
-        .btn-action:hover { background: var(--rose-prestige); }
+        .wedding-card { background: white; padding: 25px 20px; margin-top: 20px; border: 1px solid var(--line-color); text-align: left; }
+        .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
+        
+        /* Couleur modifiée en rose pâle */
+        .rsvp-deadline { font-family: 'Cormorant Garamond', serif; font-size: 1.05rem; color: var(--rose-prestige); font-style: italic; text-align: center; display: block; margin-bottom: 15px; font-weight: 600; }
     </style>
 </head>
 <body>
@@ -87,89 +93,125 @@
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
         <img src="logoES.png" alt="Logo" style="width: 70px;">
+
         <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
 
         <div class="event-card" id="mairie">
-            <h2 class="section-title">Cérémonie Civile</h2>
+            <h2 class="section-title">Mairie</h2>
             <div class="names-inline">Eva & Samuel</div>
+
             <img src="voiture.png" alt="Voiture" class="illust-voiture">
+
             <span class="sub-text">Se diront « oui »</span>
+
             <div class="date-block">
                 <span class="date-line">Mercredi 6 Mai 2026</span><br>
                 <span>à 14h30 précises</span>
             </div>
+
             <div class="info-block">
                 <span class="venue-name">Mairie de Sarcelles</span>
                 <span class="address-text">3 rue de la Résistance, 95200 Sarcelles</span>
+
                 <div class="action-btns">
-                    <a href="https://waze.com/ul?q=Mairie+de+Sarcelles" target="_blank" class="btn-mini">Itinéraire Waze</a>
-                    <button onclick="handleCalendar('Mairie', '20260506T143000', '20260506T160000', 'Mairie de Sarcelles')" class="btn-mini">Ajouter au calendrier</button>
+                    <a href="https://waze.com/ul?q=Mairie+de+Sarcelles+3+rue+de+la+resistance+95200+Sarcelles" target="_blank" class="btn-mini">Waze</a>
+                    <button onclick="handleCalendar('Mairie', '20260506T143000', '20260506T160000', 'Mairie de Sarcelles')" class="btn-mini">Calendrier</button>
+                </div>
+
+                <span class="highlight-text">Un vin d'honneur suivra au :</span>
+                <span class="venue-name" style="font-size: 1.2rem;">Centre Bérechit</span>
+                <span class="address-text">74 Avenue Paul Valéry, 95200 Sarcelles</span>
+
+                <div class="action-btns">
+                    <a href="https://waze.com/ul?q=Centre+Berechit+74+Avenue+Paul+Valery+95200+Sarcelles" target="_blank" class="btn-mini">Waze</a>
                 </div>
             </div>
         </div>
 
         <div class="event-card" id="houppa">
             <img src="hebreu.png" alt="Bénédiction" class="hebreu-img">
+            <h2 class="section-title">Houppa</h2>
             <img src="baguess.png" alt="Alliances" class="illust-bagues">
+
             <div class="family-grid">
                 <div class="family-col">
                     <h3>Famille de la Kala</h3>
                     <p>Jacqueline Levy</p>
                     <p>Huguette Soulat</p>
+                    <div class="family-spacer"></div>
                     <p><br>Cecilia & Stéphane Levy</p>
                 </div>
+
                 <div class="family-col">
                     <h3>Famille du Hatan</h3>
                     <p>Simone Msika</p>
+                    <div class="family-spacer" style="margin-bottom: 25px;"></div>
                     <p><br>Corinne & Georges Uzan</p>
                 </div>
             </div>
-            <p style="margin: 20px 0; font-style: italic; font-size: 1.1rem; color: var(--text-dark);">
+
+            <p style="margin-bottom: 15px; font-style: italic; font-size: 1rem;">
                 Ont l’immense joie de vous faire part de la Houppa de leurs enfants et petits-enfants
             </p>
+
             <div class="names-inline">Eva & Samuel</div>
             <div class="names-hebrew">הוה & שמואל</div>
-            <div class="date-block" style="margin-top: 25px;">
+
+            <div class="date-block">
                 <span class="date-line">Mardi 12 Mai 2026</span><br>
                 <span>à 17h30</span>
             </div>
+
             <div class="info-block">
                 <span class="venue-name">Le White</span>
                 <span class="address-text">68 rue Louis Ampère, 93330 Neuilly sur Marne</span>
+
                 <div class="action-btns">
-                    <a href="https://waze.com/ul?q=Le+White+Neuilly+sur+Marne" target="_blank" class="btn-mini">Itinéraire Waze</a>
-                    <button onclick="handleCalendar('Houppa', '20260512T173000', '20260513T040000', 'Le White, Neuilly sur Marne')" class="btn-mini">Ajouter au calendrier</button>
+                    <a href="https://waze.com/ul?q=Le+White+68+rue+Louis+Ampere+93330+Neuilly+sur+Marne" target="_blank" class="btn-mini">Waze</a>
+                    <button onclick="handleCalendar('Houppa', '20260512T173000', '20260513T040000', 'Le White, Neuilly sur Marne')" class="btn-mini">Calendrier</button>
                 </div>
             </div>
+
             <div class="memorial-card">
-                <p>Une pensée émue pour nos grands-parents... Que leurs bénédictions illuminent notre vie.</p>
+                <p>
+                    Une pensée très émue pour nos grands-parents<br>
+                    <strong>Roger Benoun Levy, Michel Soulat</strong>,<br>
+                    <strong>Claude Nessim Msika</strong>,<br>
+                    <strong>Thérèse Esther & Jacques Isaac Uzan</strong><br>
+                    qui nous manqueront tant en ce jour unique.<br><br>
+                    Que leurs bénédictions illuminent notre vie.
+                </p>
             </div>
         </div>
 
+        <img src="verre.JPG" alt="Célébration" class="section-photo">
+
         <div class="wedding-card" id="rsvp">
-            <h2 class="section-title" style="text-align: center; font-size: 1.5rem; margin-bottom: 5px;">Confirmation</h2>
-            <p style="text-align: center; color: var(--rose-clair); font-family: 'Montserrat', sans-serif; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 3px; margin-bottom: 25px; font-weight: 400; opacity: 0.8;">
-                Réponse souhaitée avant le 1er Avril
-            </p>
+            <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
+            <span class="rsvp-deadline">Réponse souhaitée avant le 1er Avril 2026</span>
+            
             <form id="rsvpForm">
-                <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
-                <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
-                    <option value="" disabled selected>Présence Mairie ?</option>
+                <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
+
+                <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
+                    <option value="" disabled selected>Présence Mairie & Vin d'honneur ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
                 <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_m" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-                <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
-                    <option value="" disabled selected>Présence Houppa ?</option>
+
+                <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
+                    <option value="" disabled selected>Présence Houppa & Soirée ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
                 <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_h" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-                <button type="submit" class="btn-action">Envoyer ma réponse</button>
+
+                <button type="submit" id="subBtn" class="btn-action">Envoyer ma réponse</button>
             </form>
         </div>
     </div>
@@ -182,18 +224,35 @@
     function handleCalendar(type, start, end, loc) {
         const title = "Mariage Eva & Samuel - " + type;
         const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
+
         if (isIOS) {
-            const icsData = ["BEGIN:VCALENDAR","VERSION:2.0","BEGIN:VEVENT","DTSTART:"+start,"DTEND:"+end,"SUMMARY:"+title,"LOCATION:"+loc,"END:VEVENT","END:VCALENDAR"].join("\r\n");
+            const icsData = [
+                "BEGIN:VCALENDAR",
+                "VERSION:2.0",
+                "BEGIN:VEVENT",
+                "DTSTART:" + start,
+                "DTEND:" + end,
+                "SUMMARY:" + title,
+                "LOCATION:" + loc,
+                "END:VEVENT",
+                "END:VCALENDAR"
+            ].join("\r\n");
+
             const blob = new Blob([icsData], { type: "text/calendar;charset=utf-8" });
             const link = document.createElement("a");
             link.href = window.URL.createObjectURL(blob);
             link.setAttribute("download", title + ".ics");
+            document.body.appendChild(link);
             link.click();
+            document.body.removeChild(link);
         } else {
-            const gUrl = `https://www.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&dates=${start}Z/${end}Z&location=${encodeURIComponent(loc)}`;
+            const gStart = start + "Z";
+            const gEnd = end + "Z";
+            const gUrl = `https://www.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&dates=${gStart}/${gEnd}&location=${encodeURIComponent(loc)}`;
             window.open(gUrl, '_blank');
         }
     }
 </script>
+
 </body>
 </html>
