Update styling for car illustration in invitation.html
Adjusted margin and padding for the car illustration and removed a comment about color change.

--- a/invitation.html
+++ b/invitation.html
@@ -50,7 +50,8 @@
         }
         .btn-mini:hover { background: var(--rose-prestige); color: white; }
 
-        .illust-voiture { width: 160px; height: auto; margin: 5px auto; display: block; }
+        /* Ajustement espace voiture.png */
+        .illust-voiture { width: 160px; height: auto; margin: -10px auto 5px; display: block; padding: 0; }
         .illust-bagues { width: 130px; height: auto; margin: 5px auto; display: block; }
 
         .hebreu-img { width: 100%; max-width: 380px; margin: 0 auto 10px; display: block; filter: sepia(0.2); }
@@ -73,7 +74,6 @@
         .wedding-card { background: white; padding: 25px 20px; margin-top: 20px; border: 1px solid var(--line-color); text-align: left; }
         .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
         
-        /* Couleur modifiée en rose pâle */
         .rsvp-deadline { font-family: 'Cormorant Garamond', serif; font-size: 1.05rem; color: var(--rose-prestige); font-style: italic; text-align: center; display: block; margin-bottom: 15px; font-weight: 600; }
     </style>
 </head>
