--- a/invitation.html
+++ b/invitation.html
@@ -18,9 +18,41 @@
 
         #fixed-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: url('fond.JPG') repeat; background-size: 250px; opacity: 0.25; z-index: 0; pointer-events: none; }
 
-        .navbar { position: fixed; top: 0; width: 100%; height: 60px; background-color: rgba(255, 253, 249, 0.98); display: flex; justify-content: center; align-items: center; z-index: 1000; border-bottom: 1px solid var(--line-color); backdrop-filter: blur(5px); }
-        .nav-links { display: flex; gap: 10px; list-style: none; padding: 0; margin: 0; }
-        .nav-links a { text-decoration: none; color: var(--text-gray); text-transform: uppercase; font-family: 'Montserrat', sans-serif; font-size: 0.6rem; letter-spacing: 1px; font-weight: 700; }
+        /* Mise à jour de la Navbar pour le logo à gauche */
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 60px;
+            background-color: rgba(255, 253, 249, 0.98);
+            display: flex;
+            justify-content: space-between; /* Espace entre le logo et les liens */
+            align-items: center;
+            z-index: 1000;
+            border-bottom: 1px solid var(--line-color);
+            backdrop-filter: blur(5px);
+            padding: 0 15px; /* Marge interne pour ne pas coller aux bords */
+        }
+        .nav-logo {
+            height: 40px; /* Taille du logo dans le menu */
+            width: auto;
+        }
+        .nav-links {
+            display: flex;
+            gap: 12px;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .nav-links a {
+            text-decoration: none;
+            color: var(--text-gray);
+            text-transform: uppercase;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 0.6rem;
+            letter-spacing: 1px;
+            font-weight: 700;
+        }
 
         .page-wrapper { position: relative; z-index: 10; padding: 80px 10px 40px 10px; display: flex; flex-direction: column; align-items: center; }
         .main-frame { width: 100%; max-width: 600px; text-align: center; }
@@ -41,7 +73,7 @@
 
         .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 20px 15px; margin: 15px 0; width: 100%; position: relative; }
 
-        .action-btns { display: flex; justify-content: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
+        .action-btns { display: flex; justify-content: center; gap: 10px; margin-top: 15px; flex-wrap: wrap; }
         .btn-mini {
             text-decoration: none; font-family: 'Montserrat', sans-serif; font-size: 0.65rem;
             text-transform: uppercase; letter-spacing: 1px; color: var(--rose-prestige);
@@ -50,7 +82,6 @@
         }
         .btn-mini:hover { background: var(--rose-prestige); color: white; }
 
-        /* Ajustement espace voiture.png */
         .illust-voiture { width: 160px; height: auto; margin: -10px auto 5px; display: block; padding: 0; }
         .illust-bagues { width: 130px; height: auto; margin: 5px auto; display: block; }
 
@@ -73,7 +104,7 @@
 
         .wedding-card { background: white; padding: 25px 20px; margin-top: 20px; border: 1px solid var(--line-color); text-align: left; }
         .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
-        
+
         .rsvp-deadline { font-family: 'Cormorant Garamond', serif; font-size: 1.05rem; color: var(--rose-prestige); font-style: italic; text-align: center; display: block; margin-bottom: 15px; font-weight: 600; }
     </style>
 </head>
@@ -82,6 +113,7 @@
 <div id="fixed-bg"></div>
 
 <nav class="navbar">
+    <img src="logoES.png" alt="Logo ES" class="nav-logo">
     <ul class="nav-links">
         <li><a href="#accueil">Accueil</a></li>
         <li><a href="#mairie">Mairie</a></li>
@@ -166,6 +198,10 @@
                 <span class="venue-name">Le White</span>
                 <span class="address-text">68 rue Louis Ampère, 93330 Neuilly sur Marne</span>
 
+                <span class="highlight-text" style="font-size: 1.1rem; margin-top: 15px; border-top: 1px solid var(--line-color); padding-top: 10px;">
+                    La cérémonie sera suivie de la réception
+                </span>
+
                 <div class="action-btns">
                     <a href="https://waze.com/ul?q=Le+White+68+rue+Louis+Ampere+93330+Neuilly+sur+Marne" target="_blank" class="btn-mini">Waze</a>
                     <button onclick="handleCalendar('Houppa', '20260512T173000', '20260513T040000', 'Le White, Neuilly sur Marne')" class="btn-mini">Calendrier</button>
@@ -189,7 +225,7 @@
         <div class="wedding-card" id="rsvp">
             <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
             <span class="rsvp-deadline">Réponse souhaitée avant le 1er Avril 2026</span>
-            
+
             <form id="rsvpForm">
                 <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
 
