Refactor CSS styles and HTML structure for invitation

--- a/invitation.html
+++ b/invitation.html
@@ -8,6 +8,7 @@
     <style>
         :root {
             --rose-prestige: #d4a5a5;
+            --rose-fonce: #b07d7d;
             --white-cream: #fffdf9;
             --text-gray: #5a5a5a;
             --text-dark: #333333;
@@ -18,50 +19,58 @@
 
         #fixed-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: url('fond.JPG') repeat; background-size: 250px; opacity: 0.25; z-index: 0; pointer-events: none; }
 
-        /* Mise à jour de la Navbar pour le logo à gauche */
         .navbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 60px;
+            position: fixed; top: 0; width: 100%; height: 60px;
             background-color: rgba(255, 253, 249, 0.98);
-            display: flex;
-            justify-content: space-between; /* Espace entre le logo et les liens */
-            align-items: center;
-            z-index: 1000;
-            border-bottom: 1px solid var(--line-color);
-            backdrop-filter: blur(5px);
-            padding: 0 15px; /* Marge interne pour ne pas coller aux bords */
+            display: flex; justify-content: space-between; align-items: center;
+            z-index: 1000; border-bottom: 1px solid var(--line-color);
+            backdrop-filter: blur(5px); padding: 0 15px;
         }
-        .nav-logo {
-            height: 40px; /* Taille du logo dans le menu */
-            width: auto;
-        }
-        .nav-links {
-            display: flex;
-            gap: 12px;
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        .nav-links a {
-            text-decoration: none;
-            color: var(--text-gray);
-            text-transform: uppercase;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 0.6rem;
-            letter-spacing: 1px;
-            font-weight: 700;
-        }
+        .nav-logo { height: 40px; width: auto; }
+        .nav-links { display: flex; gap: 12px; list-style: none; padding: 0; margin: 0; }
+        .nav-links a { text-decoration: none; color: var(--text-gray); text-transform: uppercase; font-family: 'Montserrat', sans-serif; font-size: 0.6rem; letter-spacing: 1px; font-weight: 700; }
 
         .page-wrapper { position: relative; z-index: 10; padding: 80px 10px 40px 10px; display: flex; flex-direction: column; align-items: center; }
         .main-frame { width: 100%; max-width: 600px; text-align: center; }
 
-        .names-inline { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(2.5rem, 8vw, 3.5rem); margin: 0; }
-        .names-hebrew { font-family: 'Cormorant Garamond', serif; color: var(--rose-prestige); font-size: 1.8rem; font-weight: 700; margin-bottom: 5px; direction: rtl; }
+        /* REGLAGE HOMOGÈNE DES NOMS */
+        .names-couple-container {
+            display: flex;
+            justify-content: center;
+            align-items: center; /* Centrage vertical parfait de l'esperluette */
+            gap: 10px;
+            margin: 10px 0;
+        }
+        .name-block {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            flex: 1; /* Distribue l'espace équitablement */
+        }
+        .name-french {
+            font-family: 'Great Vibes', cursive;
+            color: var(--rose-prestige);
+            font-size: clamp(2rem, 8vw, 2.8rem);
+            line-height: 1;
+            margin: 0;
+        }
+        .name-hebrew-sub {
+            font-family: 'Cormorant Garamond', serif;
+            color: var(--rose-fonce);
+            font-size: 1.3rem;
+            font-weight: 700;
+            margin-top: 5px;
+            min-height: 1.5rem; /* Réserve l'espace même à la mairie */
+        }
+        .ampersand {
+            font-family: 'Great Vibes', cursive;
+            color: var(--rose-prestige);
+            font-size: 2rem;
+            line-height: 1;
+            padding-bottom: 20px; /* Aligne l'esperluette au niveau des prénoms et non des sous-titres */
+        }
 
         .section-title { font-family: 'Cormorant Garamond', serif; font-size: 1.8rem; text-transform: uppercase; letter-spacing: 3px; color: var(--text-dark); margin-bottom: 5px; }
-
         .hero-photo, .section-photo { width: 100%; max-width: 500px; border: 2px solid white; padding: 5px; background: white; margin: 10px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
 
         .sub-text { font-size: 1.2rem; font-style: italic; color: var(--text-gray); display: block; margin-bottom: 5px; }
@@ -82,23 +91,40 @@
         }
         .btn-mini:hover { background: var(--rose-prestige); color: white; }
 
-        .illust-voiture { width: 160px; height: auto; margin: -10px auto 5px; display: block; padding: 0; }
-        .illust-bagues { width: 130px; height: auto; margin: 5px auto; display: block; }
+        /* ILLUSTRATIONS SERRÉES ET HOMOGÈNES */
+        .illust-voiture {
+            width: 120px;
+            height: auto;
+            margin: 5px auto;
+            display: block;
+        }
+        .illust-bagues {
+            width: 90px;
+            height: auto;
+            margin: 5px auto;
+            display: block;
+        }
 
         .hebreu-img { width: 100%; max-width: 380px; margin: 0 auto 10px; display: block; filter: sepia(0.2); }
 
-        .family-grid { display: flex; justify-content: space-between; gap: 10px; margin-bottom: 15px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 15px; }
-        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.4rem; margin-bottom: 8px; font-weight: normal; }
-        .family-col p { font-size: 0.85rem; margin: 2px 0; color: var(--text-dark); line-height: 1.2; word-wrap: break-word; font-weight: 400; }
-        .family-spacer { margin-bottom: 10px; display: block; }
+        .family-grid {
+            display: flex; justify-content: space-between; gap: 5px;
+            margin-bottom: 15px; text-align: center; border-bottom: 1px solid var(--line-color);
+            padding-bottom: 15px; width: 100%;
+            align-items: flex-end;
+        }
+        .family-col { flex: 1; min-width: 0; display: flex; flex-direction: column; justify-content: flex-end; }
+        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.3rem; margin-bottom: 8px; font-weight: normal; }
+        .family-col p {
+            font-size: clamp(10px, 2.7vw, 12.5px);
+            margin: 2px 0; color: var(--text-dark); line-height: 1.2;
+            white-space: nowrap; font-weight: 500; letter-spacing: -0.2px;
+        }
+        .parent-line { margin-top: 12px; }
 
         .memorial-card {
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 4px;
-            padding: 25px 20px;
-            margin: 20px auto 5px;
-            max-width: 90%;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            background-color: rgba(255, 255, 255, 0.8); border-radius: 4px; padding: 25px 20px;
+            margin: 20px auto 5px; max-width: 90%; box-shadow: 0 4px 15px rgba(0,0,0,0.05);
         }
         .memorial-card p { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.5; color: var(--text-dark); font-style: italic; margin: 0; }
 
@@ -125,35 +151,40 @@
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
         <img src="logoES.png" alt="Logo" style="width: 70px;">
-
         <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
 
         <div class="event-card" id="mairie">
             <h2 class="section-title">Mairie</h2>
-            <div class="names-inline">Eva & Samuel</div>
+            <br>
+            <div class="names-couple-container">
+                <div class="name-block">
+                    <p class="name-french">Eva</p>
+                    <span class="name-hebrew-sub">&nbsp;</span>
+                </div>
+                <span class="ampersand">&</span>
+                <div class="name-block">
+                    <p class="name-french">Samuel</p>
+                    <span class="name-hebrew-sub">&nbsp;</span>
+                </div>
+            </div>
 
             <img src="voiture.png" alt="Voiture" class="illust-voiture">
 
             <span class="sub-text">Se diront « oui »</span>
-
             <div class="date-block">
                 <span class="date-line">Mercredi 6 Mai 2026</span><br>
                 <span>à 14h30 précises</span>
             </div>
-
             <div class="info-block">
                 <span class="venue-name">Mairie de Sarcelles</span>
                 <span class="address-text">3 rue de la Résistance, 95200 Sarcelles</span>
-
                 <div class="action-btns">
                     <a href="https://waze.com/ul?q=Mairie+de+Sarcelles+3+rue+de+la+resistance+95200+Sarcelles" target="_blank" class="btn-mini">Waze</a>
                     <button onclick="handleCalendar('Mairie', '20260506T143000', '20260506T160000', 'Mairie de Sarcelles')" class="btn-mini">Calendrier</button>
                 </div>
-
                 <span class="highlight-text">Un vin d'honneur suivra au :</span>
                 <span class="venue-name" style="font-size: 1.2rem;">Centre Bérechit</span>
                 <span class="address-text">74 Avenue Paul Valéry, 95200 Sarcelles</span>
-
                 <div class="action-btns">
                     <a href="https://waze.com/ul?q=Centre+Berechit+74+Avenue+Paul+Valery+95200+Sarcelles" target="_blank" class="btn-mini">Waze</a>
                 </div>
@@ -163,31 +194,43 @@
         <div class="event-card" id="houppa">
             <img src="hebreu.png" alt="Bénédiction" class="hebreu-img">
             <h2 class="section-title">Houppa</h2>
-            <img src="baguess.png" alt="Alliances" class="illust-bagues">
 
             <div class="family-grid">
                 <div class="family-col">
                     <h3>Famille de la Kala</h3>
                     <p>Jacqueline Levy</p>
                     <p>Huguette Soulat</p>
-                    <div class="family-spacer"></div>
-                    <p><br>Cecilia & Stéphane Levy</p>
+                    <div class="parent-line">
+                        <p>Cecilia & Stéphane Levy</p>
+                    </div>
                 </div>
-
                 <div class="family-col">
                     <h3>Famille du Hatan</h3>
                     <p>Simone Msika</p>
-                    <div class="family-spacer" style="margin-bottom: 25px;"></div>
-                    <p><br>Corinne & Georges Uzan</p>
+                    <p style="visibility: hidden;">Compensateur</p>
+                    <div class="parent-line">
+                        <p>Corinne & Georges Uzan</p>
+                    </div>
                 </div>
             </div>
 
-            <p style="margin-bottom: 15px; font-style: italic; font-size: 1rem;">
+            <p style="margin-bottom: 25px; font-style: italic; font-size: 0.95rem;">
                 Ont l’immense joie de vous faire part de la Houppa de leurs enfants et petits-enfants
             </p>
 
-            <div class="names-inline">Eva & Samuel</div>
-            <div class="names-hebrew">הוה & שמואל</div>
+            <div class="names-couple-container">
+                <div class="name-block">
+                    <p class="name-french">Eva</p>
+                    <span class="name-hebrew-sub">חוה</span>
+                </div>
+                <span class="ampersand">&</span>
+                <div class="name-block">
+                    <p class="name-french">Samuel</p>
+                    <span class="name-hebrew-sub">שמואל</span>
+                </div>
+            </div>
+
+            <img src="baguess.png" alt="Alliances" class="illust-bagues">
 
             <div class="date-block">
                 <span class="date-line">Mardi 12 Mai 2026</span><br>
@@ -197,11 +240,9 @@
             <div class="info-block">
                 <span class="venue-name">Le White</span>
                 <span class="address-text">68 rue Louis Ampère, 93330 Neuilly sur Marne</span>
-
                 <span class="highlight-text" style="font-size: 1.1rem; margin-top: 15px; border-top: 1px solid var(--line-color); padding-top: 10px;">
                     La cérémonie sera suivie de la réception
                 </span>
-
                 <div class="action-btns">
                     <a href="https://waze.com/ul?q=Le+White+68+rue+Louis+Ampere+93330+Neuilly+sur+Marne" target="_blank" class="btn-mini">Waze</a>
                     <button onclick="handleCalendar('Houppa', '20260512T173000', '20260513T040000', 'Le White, Neuilly sur Marne')" class="btn-mini">Calendrier</button>
@@ -209,8 +250,7 @@
             </div>
 
             <div class="memorial-card">
-                <p>
-                    Une pensée très émue pour nos grands-parents<br>
+                <p>Une pensée très émue pour nos grands-parents<br>
                     <strong>Roger Benoun Levy, Michel Soulat</strong>,<br>
                     <strong>Claude Nessim Msika</strong>,<br>
                     <strong>Thérèse Esther & Jacques Isaac Uzan</strong><br>
@@ -225,10 +265,8 @@
         <div class="wedding-card" id="rsvp">
             <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
             <span class="rsvp-deadline">Réponse souhaitée avant le 1er Avril 2026</span>
-
             <form id="rsvpForm">
                 <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
-
                 <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
                     <option value="" disabled selected>Présence Mairie & Vin d'honneur ?</option>
                     <option value="oui">OUI</option>
@@ -237,7 +275,6 @@
                 <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_m" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-
                 <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
                     <option value="" disabled selected>Présence Houppa & Soirée ?</option>
                     <option value="oui">OUI</option>
@@ -246,7 +283,6 @@
                 <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_h" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-
                 <button type="submit" id="subBtn" class="btn-action">Envoyer ma réponse</button>
             </form>
         </div>
@@ -260,30 +296,14 @@
     function handleCalendar(type, start, end, loc) {
         const title = "Mariage Eva & Samuel - " + type;
         const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
-
         if (isIOS) {
-            const icsData = [
-                "BEGIN:VCALENDAR",
-                "VERSION:2.0",
-                "BEGIN:VEVENT",
-                "DTSTART:" + start,
-                "DTEND:" + end,
-                "SUMMARY:" + title,
-                "LOCATION:" + loc,
-                "END:VEVENT",
-                "END:VCALENDAR"
-            ].join("\r\n");
-
+            const icsData = ["BEGIN:VCALENDAR","VERSION:2.0","BEGIN:VEVENT","DTSTART:"+start,"DTEND:"+end,"SUMMARY:"+title,"LOCATION:"+loc,"END:VEVENT","END:VCALENDAR"].join("\r\n");
             const blob = new Blob([icsData], { type: "text/calendar;charset=utf-8" });
             const link = document.createElement("a");
-            link.href = window.URL.createObjectURL(blob);
-            link.setAttribute("download", title + ".ics");
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
+            link.href = window.URL.createObjectURL(blob); link.setAttribute("download", title + ".ics");
+            document.body.appendChild(link); link.click(); document.body.removeChild(link);
         } else {
-            const gStart = start + "Z";
-            const gEnd = end + "Z";
+            const gStart = start + "Z"; const gEnd = end + "Z";
             const gUrl = `https://www.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&dates=${gStart}/${gEnd}&location=${encodeURIComponent(loc)}`;
             window.open(gUrl, '_blank');
         }
