--- a/invitation.html
+++ b/invitation.html
@@ -53,8 +53,7 @@
             line-height: 1;
             margin: 0;
         }
-        
-        /* MISE À JOUR DE LA POLICE ICI */
+
         .name-hebrew-sub {
             font-family: 'Frank Ruhl Libre', serif;
             color: var(--rose-fonce);
@@ -80,7 +79,14 @@
         .date-line { font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dark); }
         .venue-name { font-size: 1.4rem; font-weight: 700; color: var(--rose-prestige); margin-top: 2px; display: block; }
         .address-text { font-style: italic; font-size: 1rem; color: var(--text-gray); }
-        .highlight-text { font-size: 0.95rem; color: var(--rose-prestige); font-style: italic; margin-top: 5px; display: block; }
+
+        .highlight-text {
+            font-size: 0.95rem;
+            color: var(--text-dark);
+            font-style: italic;
+            margin-top: 5px;
+            display: block;
+        }
 
         .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 20px 15px; margin: 15px 0; width: 100%; position: relative; }
 
@@ -118,8 +124,38 @@
         }
         .memorial-card p { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.5; color: var(--text-dark); font-style: italic; margin: 0; }
 
+        /* FORMULAIRE STYLISÉ */
         .wedding-card { background: white; padding: 25px 20px; margin-top: 20px; border: 1px solid var(--line-color); text-align: left; }
         .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
+
+        .form-input { margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit; font-size: 0.9rem; }
+
+        .message-box {
+            background: #fffdf9;
+            border: 1px solid var(--line-color);
+            padding: 15px;
+            margin-bottom: 15px;
+            position: relative;
+        }
+        .message-box label {
+            display: block;
+            font-family: 'Great Vibes', cursive;
+            font-size: 1.4rem;
+            color: var(--rose-fonce);
+            margin-bottom: 8px;
+            text-align: center;
+        }
+        .message-box textarea {
+            width: 100%;
+            height: 80px;
+            border: none;
+            background: transparent;
+            font-family: 'Cormorant Garamond', serif;
+            font-style: italic;
+            resize: none;
+            outline: none;
+            text-align: center;
+        }
 
         .rsvp-deadline { font-family: 'Cormorant Garamond', serif; font-size: 1.05rem; color: var(--rose-prestige); font-style: italic; text-align: center; display: block; margin-bottom: 15px; font-weight: 600; }
     </style>
@@ -255,24 +291,33 @@
         <div class="wedding-card" id="rsvp">
             <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
             <span class="rsvp-deadline">Réponse souhaitée avant le 1er Avril 2026</span>
+
             <form id="rsvpForm">
-                <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
-                <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
+                <input type="text" name="nom" required placeholder="Nom & Prénom" class="form-input">
+
+                <select name="pres_m" id="pres_m" onchange="toggleM()" required class="form-input">
                     <option value="" disabled selected>Présence Mairie & Vin d'honneur ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
-                <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
-                    <input type="number" name="ad_m" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
+                <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px; border-left: 2px solid var(--rose-prestige);">
+                    <input type="number" name="nb_m" min="1" placeholder="Nombre de personnes" class="form-input" style="margin-bottom:0;">
                 </div>
-                <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
+
+                <select name="pres_h" id="pres_h" onchange="toggleH()" required class="form-input">
                     <option value="" disabled selected>Présence Houppa & Soirée ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
-                <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
-                    <input type="number" name="ad_h" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
+                <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px; border-left: 2px solid var(--rose-prestige);">
+                    <input type="number" name="nb_h" min="1" placeholder="Nombre de personnes" class="form-input" style="margin-bottom:0;">
                 </div>
+
+                <div class="message-box">
+                    <label>Un petit mot pour nous...</label>
+                    <textarea name="message" placeholder="Votre message ici..."></textarea>
+                </div>
+
                 <button type="submit" id="subBtn" class="btn-action">Envoyer ma réponse</button>
             </form>
         </div>
